# custom_cursor

./: .pre-commit-config.yaml  README.md  config.json  main.py  pyproject.toml  setup.cfg
config/: default_config.py  logger_config.py
src/: catche_manager.py  cursor_project_generator.py  display_info.py  ollama_client.py
